Tue Nov 24 11:56:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/On_Inconsistent_Topic/descriptors/Plan.cdp:
          Updated for beta 2

        * connectors/dds4ccm/tests/On_Inconsistent_Topic/descriptors/run_test.pl:
          Sleep 10 seconds

        * connectors/dds4ccm/tests/On_Inconsistent_Topic/Receiver/ConnectorStatusListener_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/On_Inconsistent_Topic/Sender/ConnectorStatusListener_Test_Sender_exec.cpp:
          Also print a message when it succeeds

Tue Nov 24 10:11:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/On_Inconsistent_Topic/*:
          New test for On_Inconsistent_Topic callback on the ConnectorStatusListener.
          Created by Marijke Hengstmengel  <mhengstmengel@remedy.nl>

Tue Nov 24 09:36:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_component_mpc.pl:
          Generate the needed -Gxh flags

Tue Nov 24 09:35:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/dds4ccm_Base.idl
        * connectors/dds4ccm/impl/ndds/DDS_Base_Connector_T.cpp
        * connectors/dds4ccm/impl/ndds/DDS_Base_Connector_T.h
        * connectors/dds4ccm/impl/ndds/DDS_Event_Connector_T.cpp
        * connectors/dds4ccm/impl/ndds/DDS_Event_Connector_T.h
        * connectors/dds4ccm/impl/ndds/DDS_TopicBase_Connector_T.cpp
        * connectors/dds4ccm/impl/ndds/DDS_TopicBase_Connector_T.h
        * connectors/dds4ccm/impl/ndds/DomainParticipant.cpp
        * connectors/dds4ccm/impl/ndds/DomainParticipantFactory.cpp
        * connectors/dds4ccm/impl/ndds/DomainParticipantFactory.h
        * connectors/dds4ccm/impl/ndds/Updater_T.cpp
          Implemented more functionality of the beta 2 spec:
          - Attributes are not changeble after configuration_complete
          - qos_profile is passed to DDS when set, this has to be libraryname#profilename