@@ -18,62 +18,58 @@
 
 namespace CIAO_ConnectorStatusListener_Test_Receiver_Impl
 {
-  typedef ACE_Atomic_Op <TAO_SYNCH_MUTEX, CORBA::ULong > Atomic_ULong;
   typedef ACE_Atomic_Op <TAO_SYNCH_MUTEX, CORBA::Boolean > Atomic_Boolean;
 
-  
   class Receiver_exec_i;
-  
+
   class RECEIVER_EXEC_Export TestTopic_RawListener_exec_i
     : public virtual ::CCM_DDS::TestTopic::CCM_Listener,
       public virtual ::CORBA::LocalObject
   {
   public:
-    TestTopic_RawListener_exec_i (Atomic_ULong &);
+    TestTopic_RawListener_exec_i (void);
     virtual ~TestTopic_RawListener_exec_i (void);
 
     virtual void
     on_one_data (
       const TestTopic & an_instance,
       const ::CCM_DDS::ReadInfo & info);
-      
+
     virtual void
       on_many_data (
         const ::TestTopic_Seq & data,
         const ::CCM_DDS::ReadInfoSeq & infos);
-
-  private:
-    Atomic_ULong &received_;
   };
-class RECEIVER_EXEC_Export ConnectorStatusListener_exec_i
+
+  class RECEIVER_EXEC_Export ConnectorStatusListener_exec_i
     : public virtual ::CCM_DDS::CCM_ConnectorStatusListener,
       public virtual ::CORBA::LocalObject
   {
   public:
     ConnectorStatusListener_exec_i (Atomic_Boolean &);
     virtual ~ConnectorStatusListener_exec_i (void);
-    
+
     virtual
-    void on_inconsistent_topic( ::DDS::Topic_ptr the_topic, 
+    void on_inconsistent_topic( ::DDS::Topic_ptr the_topic,
                                 const DDS::InconsistentTopicStatus & status);
     virtual
     void on_requested_incompatible_qos( ::DDS::DataReader_ptr the_reader,
                                         const DDS::RequestedIncompatibleQosStatus & status);
     virtual
-    void on_sample_rejected( ::DDS::DataReader_ptr the_reader, 
+    void on_sample_rejected( ::DDS::DataReader_ptr the_reader,
                              const DDS::SampleRejectedStatus & status);
     virtual
       void on_offered_deadline_missed( ::DDS::DataWriter_ptr the_writer,
                                      const DDS::OfferedDeadlineMissedStatus & status);
     virtual
-    void on_offered_incompatible_qos( ::DDS::DataWriter_ptr the_writer, 
+    void on_offered_incompatible_qos( ::DDS::DataWriter_ptr the_writer,
                                       const DDS::OfferedIncompatibleQosStatus & status);
     virtual
       void on_unexpected_status( ::DDS::Entity_ptr the_entity,
        ::DDS::StatusKind  status_kind);
     private:
     Atomic_Boolean &inconsistent_;
-  
+
   };
   class RECEIVER_EXEC_Export PortStatusListener_exec_i
     : public virtual ::CCM_DDS::CCM_PortStatusListener,
@@ -102,10 +98,6 @@ class RECEIVER_EXEC_Export ConnectorStatusListener_exec_i
     Receiver_exec_i (void);
     virtual ~Receiver_exec_i (void);
 
-    virtual ::CORBA::Boolean raw_listen (void);
-
-    virtual void raw_listen (::CORBA::Boolean raw_listen);
-
     // Port operations.
     virtual ::CCM_DDS::TestTopic::CCM_Listener_ptr
     get_info_out_data_listener (void);
@@ -115,7 +107,6 @@ class RECEIVER_EXEC_Export ConnectorStatusListener_exec_i
 
     virtual ::CCM_DDS::CCM_ConnectorStatusListener_ptr
     get_info_out_connector_status (void);
-
 
     // Operations from Components::SessionComponent.
     virtual void
@@ -130,8 +121,6 @@ class RECEIVER_EXEC_Export ConnectorStatusListener_exec_i
 
   private:
     ::ConnectorStatusListener_Test::CCM_Receiver_Context_var context_;
-    CORBA::Boolean raw_listen_;
-    Atomic_ULong received_;
     Atomic_Boolean inconsistent_;
   };
 
