@@ -21,7 +21,6 @@ namespace CIAO_ConnectorStatusListener_Test_Sender_Impl
 
   ConnectorStatusListener_sec_exec_i::~ConnectorStatusListener_sec_exec_i (void)
   {
-
   }
 
   // Operations from ::CCM_DDS::ConnectorStatusListener
@@ -57,33 +56,14 @@ namespace CIAO_ConnectorStatusListener_Test_Sender_Impl
     ::DDS::StatusKind  status_kind)  {
  //     printf("ConnectorStatusListener_exec_i::on_unexpected_status\n");
     }
-  //============================================================
-  // Pulse generator
-  //============================================================
-
-  pulse_Generator::pulse_Generator (Sender_exec_i &callback)
-    : pulse_callback_ (callback)
-  {
-  }
-
-  int
-  pulse_Generator::handle_timeout (const ACE_Time_Value &, const void *)
-  {
-    // Notify the subscribers
-    this->pulse_callback_.tick ();
-    return 0;
-  }
 
   //============================================================
   // Component Executor Implementation Class: Sender_exec_i
   //============================================================
 
   Sender_exec_i::Sender_exec_i (void)
-    : rate_ (1),
-      iterations_ (1),
-      inconsistent_ (false)
+    : inconsistent_ (false)
   {
-    this->ticker_ = new pulse_Generator (*this);
   }
 
   Sender_exec_i::~Sender_exec_i (void)
@@ -96,80 +76,6 @@ namespace CIAO_ConnectorStatusListener_Test_Sender_Impl
     //printf ("*************** out connector status sender test_sec_topic************************\n");
     return new ConnectorStatusListener_sec_exec_i (this->inconsistent_);
   }
-
-  // Supported operations and attributes.
-  void
-  Sender_exec_i::tick ()
-  {
-
-    if(this->iterations_ == 1)
-      {
-        for (ConnectorStatusListener_TestSec_Table::iterator i = this->sec_ktests_.begin ();
-            i != this->sec_ktests_.end ();
-            ++i)
-          {
-             try
-             {
-               if (!CORBA::is_nil (this->writer2_) && !CORBA::is_nil (this->updater2_) ) {
-                 this->writer2_->write_one (i->second, ::DDS::HANDLE_NIL);
-               }
-             }
-             catch (CCM_DDS::InternalError& )
-             {
-               CIAO_ERROR ((LM_ERROR, ACE_TEXT ("Internal Error while creating topic for <%C>.\n"),
-                        i->first.c_str ()));
-             }
-           }
-         this->iterations_++;
-      }
-    else
-    {
-       for (ConnectorStatusListener_TestSec_Table::iterator i = this->sec_ktests_.begin ();
-            i != this->sec_ktests_.end ();
-            ++i)
-         {
-           try
-           {
-              if (!CORBA::is_nil (this->updater2_))  {
-              this->updater2_->create_one (i->second);
-              }
-           }
-           catch (CCM_DDS::InternalError& )
-           {
-               CIAO_ERROR ((LM_ERROR, ACE_TEXT ("Internal Error while creating topic for <%C>.\n"),
-                        i->first.c_str ()));
-           }
-        }
-        this->iterations_++;
-    }
-
-  }
-
-  void
-  Sender_exec_i::start (void)
-  {
-    // calculate the interval time
-    long usec = 10000000 / this->rate_;
-
-    if (this->context_->get_CCM_object()->_get_orb ()->orb_core ()->reactor ()->schedule_timer (
-                this->ticker_,
-                0,
-                ACE_Time_Value (0, usec),
-                ACE_Time_Value (0, usec)) == -1)
-    {
-      CIAO_ERROR ((LM_ERROR, ACE_TEXT ("Sender_exec_i::start : ")
-                             ACE_TEXT ("Error scheduling timer")));
-    }
-  }
-
-  void
-  Sender_exec_i::stop (void)
-  {
-    this->context_->get_CCM_object()->_get_orb ()->orb_core ()->reactor ()->cancel_timer (this->ticker_);
-    CIAO_DEBUG ((LM_DEBUG, ACE_TEXT ("Sender_exec_i::stop : Timer canceled.\n")));
-    delete this->ticker_;
-  }
-
 
   void
   Sender_exec_i::set_session_context (::Components::SessionContext_ptr ctx)
@@ -187,9 +93,6 @@ namespace CIAO_ConnectorStatusListener_Test_Sender_Impl
   Sender_exec_i::configuration_complete (void)
   {
     //printf("-------------configuration_complete ----------------\n");
-    this->writer2_  = this->context_->get_connection_test_sec_topic_write_data ();
-    this->updater2_ = this->context_->get_connection_test_sec_topic_update_data ();
-
   }
 
 
@@ -204,11 +107,9 @@ void
     this->sec_ktests_[key] = new_key;
   }
 
-
   void
   Sender_exec_i::ccm_activate (void)
   {
-    this->start ();
     //add 2 different instances of topic
     this->add_instance_of_sec_topic ("EEN",1);
     this->add_instance_of_sec_topic ("TWEE",2);
@@ -217,18 +118,14 @@ void
   void
   Sender_exec_i::ccm_passivate (void)
   {
-    this->stop ();
   }
 
   void
   Sender_exec_i::ccm_remove (void)
   {
     //printf("*************in remove Sender********** \n");
-
-    CORBA::Boolean _expected = true;
-    if(this->inconsistent_ != _expected)
+    if(!this->inconsistent_.value ())
       {
-
          CIAO_ERROR ((LM_ERROR, ACE_TEXT ("ERROR: did not receive the expected ")
                                ACE_TEXT (" error 'on_inconsistent_topic' in Sender\n")
                     ));
