@@ -30,41 +30,28 @@ class SENDER_EXEC_Export ConnectorStatusListener_sec_exec_i
   public:
     ConnectorStatusListener_sec_exec_i (Atomic_Boolean &);
    virtual ~ConnectorStatusListener_sec_exec_i (void);
-    
+
     virtual
-    void on_inconsistent_topic( ::DDS::Topic_ptr the_topic, 
+    void on_inconsistent_topic( ::DDS::Topic_ptr the_topic,
                                 const DDS::InconsistentTopicStatus & status);
     virtual
     void on_requested_incompatible_qos( ::DDS::DataReader_ptr the_reader,
                                         const DDS::RequestedIncompatibleQosStatus & status);
     virtual
-    void on_sample_rejected( ::DDS::DataReader_ptr the_reader, 
+    void on_sample_rejected( ::DDS::DataReader_ptr the_reader,
                              const DDS::SampleRejectedStatus & status);
     virtual
       void on_offered_deadline_missed( ::DDS::DataWriter_ptr the_writer,
                                      const DDS::OfferedDeadlineMissedStatus & status);
     virtual
-    void on_offered_incompatible_qos( ::DDS::DataWriter_ptr the_writer, 
+    void on_offered_incompatible_qos( ::DDS::DataWriter_ptr the_writer,
                                       const DDS::OfferedIncompatibleQosStatus & status);
     virtual
       void on_unexpected_status( ::DDS::Entity_ptr the_entity,
        ::DDS::StatusKind  status_kind);
      private:
     Atomic_Boolean &inconsistent_;
-  
-  };
 
-  class pulse_Generator :
-    public ACE_Event_Handler
-  {
-  public:
-    pulse_Generator (Sender_exec_i &callback);
-    /// Handle the timeout.
-    virtual int handle_timeout (const ACE_Time_Value &tv,
-                                const void *arg);
-  private:
-    /// Maintains a handle that actually process the event
-    Sender_exec_i &pulse_callback_;
   };
 
   class Sender_exec_i
@@ -86,25 +73,13 @@ class SENDER_EXEC_Export ConnectorStatusListener_sec_exec_i
     virtual void ccm_passivate (void);
     virtual void ccm_remove (void);
 
-    void tick ();
-
      // Port operations.
     virtual ::CCM_DDS::CCM_ConnectorStatusListener_ptr
       get_test_sec_topic_connector_status(void);
 
   private:
-    void start (void);
-    void stop (void);
-
-    CCM_DDS::TestSecondTopic::Updater_var updater2_;
-    CCM_DDS::TestSecondTopic::Writer_var writer2_;
-
-
-    pulse_Generator * ticker_;
     ::ConnectorStatusListener_Test::CCM_Sender_Context_var context_;
-   
-    CORBA::ULong rate_;
-    CORBA::UShort iterations_;
+
     Atomic_Boolean inconsistent_;
 
     TAO_SYNCH_MUTEX mutex_;
